# english1999

./: .gitignore  README.md  pubspec.yaml
.github/workflows/: ci.yml
android/app/: build.gradle.kts
assets/data/: versions.json  videos.json
assets/data/transcriptions/: 0.json  1.json  10.json  11.json  2.json  3.json  4.json  5.json  6.json  (+3 more)
assets/images/: PLACEHOLDER_IMAGES_NEEDED.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: playback_mode.dart  story.dart  transcription.dart  version.dart  video_lesson.dart
lib/providers/: video_player_provider.dart
lib/router/: app_router.dart
lib/screens/: stories_screen.dart  versions_screen.dart  video_lesson_screen.dart
lib/services/: audio_extraction_service.dart  preferences_service.dart  transcription_service.dart  version_service.dart  video_service.dart
lib/utils/: responsive_helper.dart  web_utils.dart  web_utils_stub.dart  web_utils_web.dart
lib/widgets/: audio_player_widget.dart  responsive_video_layout.dart  story_card.dart  transcription_list_widget.dart  transcription_segment_item.dart  version_card.dart  video_card.dart  video_player_widget.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
scripts/: .gitignore  README.md  align_whisper.py  build_all.py  extract_all.py  fetch_all_transcriptions.py  fetch_transcriptions.py  llm_align.py  pyproject.toml
test/: widget_test.dart
web/: 404.html  index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+6 files in other folders)
